Add ability to filter /v3/spaces by space guids
[finishes #159703345]

--- a/docs/v3/source/includes/resources/spaces/_list.md.erb
+++ b/docs/v3/source/includes/resources/spaces/_list.md.erb
@@ -31,6 +31,7 @@ Retrieve all spaces the user has access to.
 Name | Type | Description
 ---- | ---- | ------------
 **names** | _list of strings_ | Comma-delimited list of space names to filter by.
+**guids** | _list of strings_ | Comma-delimited list of space guids to filter by.
 **organization_guids** | _list of strings_ | Comma-delimited list of organization guids to filter by.
 **page** | _integer_ | Page to display. Valid values are integers >= 1.
 **per_page** | _integer_ | Number of results per page. <br>Valid values are 1 through 5000.
