Update docs for deployments
- Add information about optional droplet field on deployments
- Add previous_droplet to examples

[finishes #156666909]

Signed-off-by: Greg Cobb <gcobb@pivotal.io>

--- a/docs/v3/source/includes/api_resources/_deployments.erb
+++ b/docs/v3/source/includes/api_resources/_deployments.erb
@@ -6,6 +6,9 @@
   "droplet": {
     "guid": "44ccfa61-dbcf-4a0d-82fe-f668e9d2a962"
   },
+  "previous_droplet": {
+    "guid": "cc6bc315-bd06-49ce-92c2-bc3ad45268c2"
+  },
   "created_at": "2018-04-25T22:42:10Z",
   "updated_at": "2018-04-25T22:42:10Z",
   "relationships": {
@@ -46,6 +49,9 @@
       "state": "DEPLOYING",
       "droplet": {
         "guid": "44ccfa61-dbcf-4a0d-82fe-f668e9d2a962"
+      },
+      "previous_droplet": {
+        "guid": "cc6bc315-bd06-49ce-92c2-bc3ad45268c2"
       },
       "created_at": "2018-04-25T22:42:10Z",
       "updated_at": "2018-04-25T22:42:10Z",
