Fix LabelSelectorParser handling of multiple requirements
- Uses a regular join on guid instead of natural_join to properly chain
multiple label requirement queries
- Documents the `label_selector` query parameter for /v3/apps
- General refactoring of LabelSelectorParser

[#160943344]

Signed-off-by: Tim Downey <tdowney@pivotal.io>

--- a/docs/v3/source/includes/resources/apps/_list.md.erb
+++ b/docs/v3/source/includes/resources/apps/_list.md.erb
@@ -38,3 +38,4 @@ Name | Type | Description
 **per_page** | _integer_ | Number of results per page. <br>Valid values are 1 through 5000.
 **order_by** | _string_ | Value to sort by. Defaults to ascending. Prepend with `-` to sort descending. <br>Valid values are `created_at`, `updated_at`, `name`.
 **include** | _string_ | **Experimental** - Optionally include a list of unique related resources in the response. <br>Valid value is `space`
+**label_selector** | _string_ | **Experimental** - A query string containing a list of label selector requirements.
